[aliases]
test = pytest

[tool:pytest]
addopts = tests --tb=short --cov=tbl --cov-report=term-missing --cov-report=html

[wheel]
universal = 1

[metadata]
description-file = README.md
classifier = 
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
